--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField("String", "XEREON_ACCESS_KEY", xereon_access_key)
+        buildConfigField("String", "GMS_ACCESS_KEY", gms_google_play_access_key)
     }
 
     buildTypes {
@@ -61,6 +64,7 @@ dependencies {
     // Retrofit + GSON
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:3.8.0"
 
     // Glide
     implementation "com.github.bumptech.glide:glide:$glideVersion"
