--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+xereon_access_key="XE-ojhI0qBI-TrSc8nTh-Vh1Ac1g6-jbnZC780-FNXZ9Lcz-uwcBNALN-Ylvag52m"
+gms_google_play_access_key="no api key"
