· Added Map-Fragment and very simplefied search functionality · Added categorys and category-search · Fiexed a few minor bugs and issues

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,4 +20,4 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 xereon_access_key="XE-ojhI0qBI-TrSc8nTh-Vh1Ac1g6-jbnZC780-FNXZ9Lcz-uwcBNALN-Ylvag52m"
-gms_google_play_access_key="no api key"
+gms_google_play_access_key="AIzaSyAaAtKWHiNPi_x7XKeRAFnMNAORzrPNoBk"
