--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext {
-        kotlinVersion = '1.4.0'
-        navigationVersion = '2.3.0'
-        hiltVersion = '2.28.3-alpha'
-    }
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.0"
 
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.28.3-alpha"
     }
 }
 
@@ -27,23 +22,4 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
-}
-
-ext {
-    // Sdk and tools
-    minSdkVersion = 23
-    targetSdkVersion = 29
-    compileSdkVersion = 29
-
-    // App dependencies
-    appCompatVersion = '1.2.0'
-    constraintLayoutVersion = '1.1.3'
-    espressoVersion = '3.2.0'
-    glideVersion = '4.11.0'
-    hiltAndroidXVersion = '1.0.0-alpha02'
-    junitVersion = '4.13'
-    ktxVersion = '1.3.1'
-    pagingVersion = '3.0.0-alpha05'
-    retrofitVersion = '2.9.0'
-    testExtJunitVersion = '1.1.1'
 }
