--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAaAtKWHiNPi_x7XKeRAFnMNAORzrPNoBk"/>
 
-        <activity android:name=".ui._parent.MainActivity">
+        <activity android:name=".ui._parent.MainActivity"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
