--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,12 @@ dependencies {
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_x_version"
     kapt "androidx.hilt:hilt-compiler:$hilt_x_version"
 
+    //Room
+    def room_version = "2.2.6"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
     // Retrofit + GSON
     def retrofit_version = "2.9.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
