--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,10 +70,10 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:$hilt_x_version"
 
     //Room
-    def room_version = "2.2.6"
+    def room_version = "2.3.0-alpha04"
     implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     // Retrofit + GSON
     def retrofit_version = "2.9.0"
@@ -86,7 +86,7 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glide_version"
 
     // Paging 3
-    def paging_version = "3.0.0-alpha05"
+    def paging_version = "3.0.0-alpha12"
     implementation "androidx.paging:paging-runtime:$paging_version"
 }
 
